find ./ -name Makefile.am -type f -print | xargs sed -i \.bck -r 's/(lib[a-zA-Z]*)(\@PDP_SUFFIX\@)(_la)/\1\2\_@PDP_VERSION\@\3/g'
=)

this actually takes less time than opening every file and doing a find/replace

notes:
* css++ is now css
* libta is now libtacss
i think the craziest construct supported is:
libtacss_debug_nogui_mpi-3.5.so.0.0.0

--- a/Maketa.am
+++ b/Maketa.am
@@ -1,12 +1,14 @@
 # Rules for running maketa
-${PROJNAME}_TA_type.h:	${TAHEADS}
+# Only one header is listed so as not to create a race condition
+# On parallel builds
+
+${PROJNAME}_TA_type.h: ${TAHEADS}
 	${MAKE} force_ta
 
 force_ta:
-	../maketa/./maketa ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}
-
-do_ta:
 	../maketa/./maketa ${MAKETA_FLAGS} -autohx ${PROJNAME} ${TAHEADS}
+
+do_ta: force_ta
 
 # Instruct automake to clean these files on make clean
 CLEANFILES =\
