--- a/src/tamisc/Makefile.am
+++ b/src/tamisc/Makefile.am
@@ -96,14 +96,14 @@ include $(top_srcdir)/Moc.am
 include $(top_srcdir)/mfstamp.am
 
 noinst_LTLIBRARIES =\
-	libtamisc@PDP_SUFFIX@.la \
-	libtamiscTypeAccess@PDP_SUFFIX@.la
+	libtamisc@PDP_SUFFIX@@PDP_VERSION@.la \
+	libtamiscTypeAccess@PDP_SUFFIX@@PDP_VERSION@.la
 
-libtamisc@PDP_SUFFIX@_la_DEPENDENCIES = libtamiscTypeAccess@PDP_SUFFIX@.la
+libtamisc@PDP_SUFFIX@@PDP_VERSION@_la_DEPENDENCIES = libtamiscTypeAccess@PDP_SUFFIX@@PDP_VERSION@.la
 
-libtamisc@PDP_SUFFIX@_la_SOURCES = $(SRCS) $(HEADS)
+libtamisc@PDP_SUFFIX@@PDP_VERSION@_la_SOURCES = $(SRCS) $(HEADS)
 
-libtamisc@PDP_SUFFIX@_la_CPPFLAGS =\
+libtamisc@PDP_SUFFIX@@PDP_VERSION@_la_CPPFLAGS =\
 	-I@srcdir@/../ \
 	-I@abs_top_builddir@ \
 	-I@srcdir@ \
@@ -111,13 +111,13 @@ libtamisc@PDP_SUFFIX@_la_CPPFLAGS =\
 	-I@srcdir@/../css \
 	-I@srcdir@/../taiqtso
 
-libtamisc@PDP_SUFFIX@_la_LIBADD =\
-	libtamiscTypeAccess@PDP_SUFFIX@.la
+libtamisc@PDP_SUFFIX@@PDP_VERSION@_la_LIBADD =\
+	libtamiscTypeAccess@PDP_SUFFIX@@PDP_VERSION@.la
 
-libtamisc@PDP_SUFFIX@_la_CXXFLAGS = @OPT_LEVEL@
+libtamisc@PDP_SUFFIX@@PDP_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
 
-libtamiscTypeAccess@PDP_SUFFIX@_la_SOURCES = tamisc_TA.cpp tamisc_TA_type.h tamisc_TA_inst.h
+libtamiscTypeAccess@PDP_SUFFIX@@PDP_VERSION@_la_SOURCES = tamisc_TA.cpp tamisc_TA_type.h tamisc_TA_inst.h
 
-libtamiscTypeAccess@PDP_SUFFIX@_la_CPPFLAGS = $(libtamisc@PDP_SUFFIX@_la_CPPFLAGS)
+libtamiscTypeAccess@PDP_SUFFIX@@PDP_VERSION@_la_CPPFLAGS = $(libtamisc@PDP_SUFFIX@@PDP_VERSION@_la_CPPFLAGS)
 
-libtamiscTypeAccess@PDP_SUFFIX@_la_CXXFLAGS = -g -O0
+libtamiscTypeAccess@PDP_SUFFIX@@PDP_VERSION@_la_CXXFLAGS = -g -O0
