--- a/configure.ac
+++ b/configure.ac
@@ -74,7 +74,7 @@ AC_HAVE_LIBRARY([dl],[LIBS="$LIBS -ldl"],[SIM_AC_CONFIGURATION_WARNING([libdl no
 SIM_AC_HAVE_LIBZLIB_IFELSE(,[SIM_AC_CONFIGURATION_WARNING([Failed to detect libzlib])])
 
 # non-modal, for now
-AC_DEFINE([V3_COMPAT],[turn on version 3.x compatability code])
+AC_DEFINE([V3_COMPAT],[],[turn on version 3.x compatability code])
 
 # Check to see if a conflicting version of pdp++ or css++ is installed
 if test x"$prefix" = x"NONE"; then
