added darwin support for gsl

--- a/configure.ac
+++ b/configure.ac
@@ -85,10 +85,14 @@ if test x"$debug" = x"false"; then
 fi
 
 #Check for gsl, the GNU Scientific Library. By default, this #defines HAVE_LIBGSL
-AC_CHECK_LIB(m,main,[LIBS="$LIBS -lm"])
-AC_CHECK_LIB(gslcblas,main,[LIBS="$LIBS -lgslcblas"])
-AC_CHECK_LIB(gsl,main,[LIBS="$LIBS -lgsl"]
-                      [AC_DEFINE([HAVE_LIBGSL],[],[For the gnu scientific library])])
+LDFLAGS="$LDFLAGS -L/opt/local/lib" #Harmless insertion for DarwinPorts
+AC_CHECK_LIB([m],[main])
+AC_CHECK_LIB([gslcblas],[main])
+AC_CHECK_LIB([gsl],[main],
+              [LIBS="$LIBS -lgsl"]
+              [AC_DEFINE([HAVE_LIBGSL],[],[Have the gnu scientific library])]
+              [SIM_AC_CONFIGURATION_SETTING([gsl],[Enabled])],
+               [SIM_AC_CONFIGURATION_WARNING([Failed to detect the GNU Scientific Library])])
 
 # Fix pthread bug. See:  http://softwareforums.intel.com/ids/board/message?board.id=16&message.id=3484 
 CXXFLAGS="$CXXFLAGS -D_GLIBCXX_GTHREAD_USE_WEAK=0"
