--- a/src/maketa/Makefile.am
+++ b/src/maketa/Makefile.am
@@ -11,6 +11,7 @@ HEADS =\
 	../ta/ta_platform.h \
 	../ta/ta_string.h \
 	../ta/ta_variant.h \
+	../ta/ta_mtrnd.h \
 	../ta/ta_list.h \
 	../ta/ta_type.h \
 	mta_parse.h \
@@ -23,6 +24,7 @@ SRCS =\
 	../ta/ta_platform_unix.cpp \
 	../ta/ta_string.cpp \
 	../ta/ta_variant.cpp \
+	../ta/ta_mtrnd.cpp \
 	../ta/ta_list.cpp \
 	../ta/ta_type.cpp \
 	mta_parse.cpp \
@@ -49,7 +51,7 @@ ta_TA_type.h ta_TA_inst.h:
 	if [ ! -f ta_TA_type.h ];\
 	then touch -t 0412312359 ta_TA_type.h ta_TA_inst.h;fi
 
-ta_ti.cpp ta_platform.cpp ta_platform_unix.cpp ta_string.cpp ta_variant.cpp ta_list.cpp ta_type.cpp:
+ta_ti.cpp ta_platform.cpp ta_platform_unix.cpp ta_string.cpp ta_variant.cpp ta_mtrnd.cpp ta_list.cpp ta_type.cpp:
 
 bin_PROGRAMS = maketa
 
