start of ta_imgproc stuff; had to move tamisc/tdgeometry -> ta/ta_geometry

--- a/src/ta/Makefile.am
+++ b/src/ta/Makefile.am
@@ -97,9 +97,11 @@ TAHEADS =\
 	@abs_srcdir@/ta_program.h \
 	@abs_srcdir@/ta_matrix.h \
 	@abs_srcdir@/ta_math.h \
+	@abs_srcdir@/ta_geometry.h \
 	@abs_srcdir@/ta_data.h \
 	@abs_srcdir@/ta_datatable.h \
 	@abs_srcdir@/ta_dataops.h \
+	@abs_srcdir@/ta_imgproc.h \
 	@abs_srcdir@/ta_dump.h \
 	@abs_srcdir@/ta_defaults.h \
 	@abs_srcdir@/ta_project.h \
@@ -131,15 +133,17 @@ HEADS =\
 	ta_matrix.h \
 	ta_data.h \
 	ta_math.h \
+	ta_geometry.h \
 	ta_datatable.h \
 	ta_dataops.h \
+	ta_imgproc.h \
 	ta_dump.h \
 	ta_defaults.h \
 	ta_project.h \
 	$(HEADS_GUI)
 
 SRCS =\
-	ta_dataops.cpp \
+	ta_imgproc.cpp \
 	ta_platform.cpp \
 	ta_platform_unix.cpp \
 	ta_thread.cpp \
@@ -164,8 +168,10 @@ SRCS =\
 	ta_program.cpp \
 	ta_matrix.cpp \
 	ta_math.cpp \
+	ta_geometry.cpp \
 	ta_data.cpp \
 	ta_datatable.cpp \
+	ta_dataops.cpp \
 	ta_dump.cpp \
 	ta_defaults.cpp \
 	ta_project.cpp \
