--- a/src/ta/Makefile.am
+++ b/src/ta/Makefile.am
@@ -100,7 +100,7 @@ TAHEADS =\
 	@abs_srcdir@/ta_geometry.h \
 	@abs_srcdir@/ta_data.h \
 	@abs_srcdir@/ta_datatable.h \
-	@abs_srcdir@/ta_dataops.h \
+	@abs_srcdir@/ta_dataproc.h \
 	@abs_srcdir@/ta_imgproc.h \
 	@abs_srcdir@/ta_dump.h \
 	@abs_srcdir@/ta_defaults.h \
@@ -135,7 +135,7 @@ HEADS =\
 	ta_math.h \
 	ta_geometry.h \
 	ta_datatable.h \
-	ta_dataops.h \
+	ta_dataproc.h \
 	ta_imgproc.h \
 	ta_dump.h \
 	ta_defaults.h \
@@ -171,7 +171,7 @@ SRCS =\
 	ta_geometry.cpp \
 	ta_data.cpp \
 	ta_datatable.cpp \
-	ta_dataops.cpp \
+	ta_dataproc.cpp \
 	ta_dump.cpp \
 	ta_defaults.cpp \
 	ta_project.cpp \
