--- a/Maketa.am
+++ b/Maketa.am
@@ -39,13 +39,11 @@ MAKETA_FLAGS =\
 	-I@abs_top_builddir@ \
 	-I@abs_srcdir@ \
 	-I@abs_srcdir@/../ta/ios-g++-3.1 \
-	-I@abs_srcdir@/../pdp \
 	-I@abs_srcdir@/../ta \
+	-I@abs_srcdir@/../pdp \
 	-I@abs_srcdir@/../css \
 	-I@abs_srcdir@/../leabra \
-	-I@abs_srcdir@/../tamisc \
 	-I@abs_srcdir@/../taiqtso \
-	-I@abs_srcdir@/../bp \
-	-I@abs_srcdir@/../tamisc
+	-I@abs_srcdir@/../bp 
 
 BUILT_SOURCES = ${PROJNAME}_TA_type.h ${PROJNAME}_TA_inst.h
